--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basket</title>
+    <title>P324.AZ</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -15,6 +15,71 @@
 </head>
 
 <body>
+    <header class="bg-success py-3">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-2 col-6 logo">
+                    <a href="index.html">P324.AZ</a>
+                </div>
+                <div class="col-lg-10 col-6 text-end">
+                    <a href="basket.html">
+                        <i class="fa-solid fa-cart-shopping">
+                            <span id="count">0</span>
+                        </i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <section class="mt-4" id="Products">
+        <div class="container">
+            <div class="row g-4">
+                <div id="1" class="col-lg-4">
+                    <div class="card">
+                        <img class="card-img-top"
+                            src="https://static.shop.az/images/product/large/n/b/4/1/35854ce509f9f1f829f67d4ff713c654.jpg"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Qol saatı Casio STANDARD ANALOG MTP-V001GL-7BUDF</h5>
+                            <p class="card-text">53.10 AZN</p>
+                            <a href="#" class="btn btn-primary" id="addToCart"><i class="fa-solid fa-cart-shopping"></i>
+                                Add to cart</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="2" class="col-lg-4">
+                    <div class="card">
+                        <img class="card-img-top"
+                            src="https://static.shop.az/images/product/large/s/g/4/a/47e15935ecddd0e0231042eeecbfb4c6.jpg"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Paltaryuyan maşın Bosch WAB20262ME</h5>
+                            <p class="card-text">649 AZN</p>
+                            <a href="#" class="btn btn-primary" id="addToCart">
+                                <i class="fa-solid fa-cart-shopping"></i> Add to cart</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="3" class="col-lg-4">
+                    <div class="card">
+                        <img class="card-img-top"
+                            src="https://static.shop.az/images/product/large/y/g/i/l/490babfabfadc257399c9d6b23f1ffe6.jpg"
+                            alt="Card image cap">
+                        <div class="card-body">
+                            <h5 class="card-title">Qulaqlıq SonicGear Headphone Elysium Fideliio Crimson Red</h5>
+                            <p class="card-text">79 AZN</p>
+                            <a href="#" class="btn btn-primary" id="addToCart"><i class="fa-solid fa-cart-shopping"></i>
+                                Add to cart</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="assets/js/app.js"></script>
 </body>
