index.html updated

--- a/basket.html
+++ b/basket.html
@@ -55,7 +55,8 @@
         </div>
     </div>
 
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/basket.js"></script>
 </body>
 
 </html>
