--- a/index.html
+++ b/index.html
@@ -33,45 +33,45 @@
     </header>
 
 
-    <section class="mt-4" id="Products">
+    <section id="Products" class="mt-4">
         <div class="container">
             <div class="row g-4">
-                <div id="1" class="col-lg-4">
+                <div id="1" class="col-lg-4 product">
                     <div class="card">
                         <img class="card-img-top"
                             src="https://static.shop.az/images/product/large/n/b/4/1/35854ce509f9f1f829f67d4ff713c654.jpg"
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Qol saatı Casio STANDARD ANALOG MTP-V001GL-7BUDF</h5>
-                            <p class="card-text">53.10 AZN</p>
+                            <p class="card-text"><span id="price">53.10</span> AZN</p>
                             <a href="#" class="btn btn-primary" id="addToCart"><i class="fa-solid fa-cart-shopping"></i>
                                 Add to cart</a>
                         </div>
                     </div>
                 </div>
 
-                <div id="2" class="col-lg-4">
+                <div id="2" class="col-lg-4 product">
                     <div class="card">
                         <img class="card-img-top"
                             src="https://static.shop.az/images/product/large/s/g/4/a/47e15935ecddd0e0231042eeecbfb4c6.jpg"
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Paltaryuyan maşın Bosch WAB20262ME</h5>
-                            <p class="card-text">649 AZN</p>
+                            <p class="card-text"><span id="price">649</span> AZN</p>
                             <a href="#" class="btn btn-primary" id="addToCart">
                                 <i class="fa-solid fa-cart-shopping"></i> Add to cart</a>
                         </div>
                     </div>
                 </div>
 
-                <div id="3" class="col-lg-4">
+                <div id="3" class="col-lg-4 product">
                     <div class="card">
                         <img class="card-img-top"
                             src="https://static.shop.az/images/product/large/y/g/i/l/490babfabfadc257399c9d6b23f1ffe6.jpg"
                             alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Qulaqlıq SonicGear Headphone Elysium Fideliio Crimson Red</h5>
-                            <p class="card-text">79 AZN</p>
+                            <p class="card-text"><span id="price">79</span> AZN</p>
                             <a href="#" class="btn btn-primary" id="addToCart"><i class="fa-solid fa-cart-shopping"></i>
                                 Add to cart</a>
                         </div>
@@ -81,7 +81,7 @@
         </div>
     </section>
 
-    <script src="assets/js/app.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
