--- a/basket.html
+++ b/basket.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Storage</title>
+    <title>Basket</title>
     <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -41,7 +41,7 @@
                             <th>Count</th>
                             <th>Price</th>
                             <th>Total Price</th>
-                            <th>Delete</th>
+                            <th></th>
                         </tr>
                     </thead>
                     <tbody id="tbody">
@@ -50,7 +50,7 @@
             </div>
             <div class="col-lg-3">
                 <h4>Məhsul sayı: <span id="totalCount">0</span></h4>
-                <h4>Ümumi məbləğ: <span id="sumPrice">0</span></h4>
+                <h4>Ümumi məbləğ: <span id="totalPrice">0</span></h4>
             </div>
         </div>
     </div>
