--- a/basket.html
+++ b/basket.html
@@ -49,8 +49,8 @@
                 </table>
             </div>
             <div class="col-lg-3">
-                <h4>Məhsul sayı: <span id="totalCount">0</span></h4>
-                <h4>Ümumi məbləğ: <span id="totalPrice">0</span></h4>
+                <h4>Məhsul sayı: <span id="total-count">0</span></h4>
+                <h4>Ümumi məbləğ: <span id="total-price">0</span></h4>
             </div>
         </div>
     </div>
