--- a/basket.html
+++ b/basket.html
@@ -6,9 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basket</title>
-    <link rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+        integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 
 <body>
@@ -18,6 +21,7 @@
                 <div class="col-lg-2 col-6 logo">
                     <a href="index.html">P324.AZ</a>
                 </div>
+
                 <div class="col-lg-10 col-6 text-end">
                     <a href="basket.html">
                         <i class="fa-solid fa-cart-shopping">
@@ -31,7 +35,7 @@
 
     <div class="container">
         <div class="row mt-4">
-            <div class="col-lg-9">
+            <div class="col-lg-8">
                 <table class="table table-striped table-bordered">
                     <thead>
                         <tr>
@@ -44,13 +48,16 @@
                             <th></th>
                         </tr>
                     </thead>
+
                     <tbody id="tbody">
+                        
                     </tbody>
                 </table>
             </div>
-            <div class="col-lg-3">
+
+            <div class="col-lg-4">
                 <h4>Məhsul sayı: <span id="total-count">0</span></h4>
-                <h4>Ümumi məbləğ: <span id="total-price">0</span></h4>
+                <h4>Ümumi məbləğ: <span id="total-price">0</span> AZN</h4>
             </div>
         </div>
     </div>
