--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <div class="col-lg-2 col-6 logo">
                     <a href="index.html">P324.AZ</a>
                 </div>
+
                 <div class="col-lg-10 col-6 text-end">
                     <a href="basket.html">
                         <i class="fa-solid fa-cart-shopping">
@@ -42,9 +43,9 @@
                             src="https://static.shop.az/images/product/large/n/b/4/1/35854ce509f9f1f829f67d4ff713c654.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Qol saatı Casio STANDARD ANALOG MTP-V001GL-7BUDF</h5>
-                            <p class="card-text"><span id="price">53.10</span> AZN</p>
-                            <a href="#" class="btn btn-primary" id="addToCart"><i class="fa-solid fa-cart-shopping"></i>
+                            <h5 id="product-title" class="card-title">Qol saatı Casio STANDARD ANALOG MTP-V001GL-7BUDF</h5>
+                            <p class="card-text"><span id="product-price">53.10</span> AZN</p>
+                            <a href="#" id="addToCart" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i>
                                 Add to cart</a>
                         </div>
                     </div>
@@ -56,9 +57,9 @@
                             src="https://static.shop.az/images/product/large/s/g/4/a/47e15935ecddd0e0231042eeecbfb4c6.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Paltaryuyan maşın Bosch WAB20262ME</h5>
-                            <p class="card-text"><span id="price">649</span> AZN</p>
-                            <a href="#" class="btn btn-primary" id="addToCart">
+                            <h5 id="product-title" class="card-title">Paltaryuyan maşın Bosch WAB20262ME</h5>
+                            <p class="card-text"><span id="product-price">649</span> AZN</p>
+                            <a href="#" id="addToCart" class="btn btn-primary">
                                 <i class="fa-solid fa-cart-shopping"></i> Add to cart</a>
                         </div>
                     </div>
@@ -70,9 +71,9 @@
                             src="https://static.shop.az/images/product/large/y/g/i/l/490babfabfadc257399c9d6b23f1ffe6.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <h5 class="card-title">Qulaqlıq SonicGear Headphone Elysium Fideliio Crimson Red</h5>
-                            <p class="card-text"><span id="price">79</span> AZN</p>
-                            <a href="#" class="btn btn-primary" id="addToCart"><i class="fa-solid fa-cart-shopping"></i>
+                            <h5 id="product-title" class="card-title">Qulaqlıq SonicGear Headphone Elysium Fideliio Crimson Red</h5>
+                            <p class="card-text"><span id="product-price">79</span> AZN</p>
+                            <a href="#" id="addToCart" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i>
                                 Add to cart</a>
                         </div>
                     </div>
